--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.19",
+    "apexcharts": "^3.33.0",
     "firebase": "^8.10.0",
     "framer-motion": "^5.5.5",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router": "^6.2.1",
